--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -16,29 +16,31 @@
 	<% if @clients.blank? %>
 	<p>No clients.</p>
 	<% else %>
-	<table>
-		<thead>
-			<tr>
-				<th>Client</th>
-				<th>&nbsp;</th>
-				<th>Contact</th>
-				<th>Hourly</th>
-				<th class="text-right">Unpaid</th>
-				<th class="text-right">Billed</th>
-			</tr>
-		</thead>
-		<tbody>
-			<% @clients.sort { |a,b| a.name <=> b.name }.each do |client| %>
-			<tr id="clientrow<%= client.id %>">
-				<td><%= link_to client do %><%= client.name %><% end %></td>
-				<td><%= link_to new_invoice_path(:client_id => client.id), :class => 'new-invoice-link' do %><%= icon('fas', 'dollar-sign') %><% end %></td>
-				<td><%= client.contact %></td>
-				<td><% if client.currentrate %><%= number_to_currency(client.currentrate) %><% else %>&mdash;<% end %></td>
-				<td class="currency text-right"><% if client.unpaidTotal > 0 %><span class="spread red"><%= number_to_currency(client.unpaidTotal, { :negative_format => '(%n)' }) %></span><% else %>&mdash;<% end %></td>
-				<td class="currency text-right"><%= number_to_currency(client.invoiceTotal, { :negative_format => '(%n)' }) %></td>
-			</tr>
-			<% end %>
-		</tbody>
-	</table>
+	<div class="table-wrap">
+		<table>
+			<thead>
+				<tr>
+					<th>Client</th>
+					<th>&nbsp;</th>
+					<th>Contact</th>
+					<th>Hourly</th>
+					<th class="text-right">Unpaid</th>
+					<th class="text-right">Billed</th>
+				</tr>
+			</thead>
+			<tbody>
+				<% @clients.sort { |a,b| a.name <=> b.name }.each do |client| %>
+				<tr id="clientrow<%= client.id %>">
+					<td><%= link_to client do %><%= client.name %><% end %></td>
+					<td><%= link_to new_invoice_path(:client_id => client.id), :class => 'new-invoice-link' do %><%= icon('fas', 'dollar-sign') %><% end %></td>
+					<td><%= client.contact %></td>
+					<td><% if client.currentrate %><%= number_to_currency(client.currentrate) %><% else %>&mdash;<% end %></td>
+					<td class="currency text-right"><% if client.unpaidTotal > 0 %><span class="spread red"><%= number_to_currency(client.unpaidTotal, { :negative_format => '(%n)' }) %></span><% else %>&mdash;<% end %></td>
+					<td class="currency text-right"><%= number_to_currency(client.invoiceTotal, { :negative_format => '(%n)' }) %></td>
+				</tr>
+				<% end %>
+			</tbody>
+		</table>
+	</div>
 	<% end %>
 </div>
