--- a/app/views/expenses/bulk_new.html.erb
+++ b/app/views/expenses/bulk_new.html.erb
@@ -4,32 +4,34 @@
 
 <%= form_tag do |f| %>
 	<div class="panel">
-		<table>
-			<thead>
-				<tr class="bulk-expenses-row-header">
-					<th>Date</th>
-					<th>Vendor</th>
-					<th>Name</th>
-					<th>Cost</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr class="new-expense-row">
-					<td>
-						<%= date_field_tag('date[]', Time.now.strftime("%Y-%m-%d"), { :required => true, :placeholder => 'YYYY-MM-DD', :pattern => '\d{4}-\d{2}-\d{2}' }) %>
-					</td>
-					<td>
-						<%= select_tag('vendor_id[]', options_from_collection_for_select(Vendor.all, 'id', 'name'), { :required => true }) %>
-					</td>
-					<td >
-						<%= text_field_tag('name[]', nil, { :required => true }) %>
-					</td>
-					<td>
-						<%= number_field_tag('cost[]', nil, { :required => true, :placeholder => '0.00', :step => '0.01' }) %>
-					</td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="table-wrap">
+			<table>
+				<thead>
+					<tr class="bulk-expenses-row-header">
+						<th>Date</th>
+						<th>Vendor</th>
+						<th>Name</th>
+						<th>Cost</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr class="new-expense-row">
+						<td>
+							<%= date_field_tag('date[]', Time.now.strftime("%Y-%m-%d"), { :required => true, :placeholder => 'YYYY-MM-DD', :pattern => '\d{4}-\d{2}-\d{2}' }) %>
+						</td>
+						<td>
+							<%= select_tag('vendor_id[]', options_from_collection_for_select(Vendor.all, 'id', 'name'), { :required => true }) %>
+						</td>
+						<td >
+							<%= text_field_tag('name[]', nil, { :required => true }) %>
+						</td>
+						<td>
+							<%= number_field_tag('cost[]', nil, { :required => true, :placeholder => '0.00', :step => '0.01' }) %>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 		<button id="duplicate-expense-row" class="duplicate-expenses-row btn btn-primary"><%= icon('far', 'copy', class: 'left') %>Duplicate</button>
 		<button type="submit" class="btn btn-success"><%= icon('far', 'save', class: 'left') %>Save</button>
 	</div>
