--- a/app/views/layouts/_financial-dash.html.erb
+++ b/app/views/layouts/_financial-dash.html.erb
@@ -1,25 +1,27 @@
 <div class="financial-dash">
 	<div class="receivable">Total Receivable: <span class="currency red"><%= number_to_currency(Invoice.unpaid.sum('cost'), { :negative_format => '(%n)' }) %></span> <small>(<%= pluralize(Invoice.unpaid.count, 'invoice') %>)</small></div>
-	<table>
-		<thead>
-			<tr>
-				<th>&nbsp;</th>
-				<th class="text-right">Goal</th>
-				<th class="text-right">Revenue</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td><%= link_to Date.today.year, year_path(Year.where(year: Date.today.year).first.year) %></td>
-				<td class="text-right"><span class="currency"><%= number_to_currency(Year.where(year: today.year).first.goal_year.to_i) %></span></td>
-				<td class="text-right"><span class="currency green"><%= number_to_currency(Invoice.paidByYear(today.year).sum('cost'), { :negative_format => '(%n)' }) %></span></td>
-			</tr>
-			<tr>
-				<td><%= today.strftime('%B') %></td>
-				<td class="text-right"><span class="currency"><%= number_to_currency(Year.where(year: today.year).first.goals_months[today.month - 1].to_i) %></span></td>
-				<td class="text-right"><span class="currency green"><%= number_to_currency(Invoice.paidByMonth(today.year, today.month).sum('cost'), { :negative_format => '(%n)' }) %></span></td>
-			</tr>
-		</tbody>
-	</table>
+	<div class="table-wrap">
+		<table>
+			<thead>
+				<tr>
+					<th>&nbsp;</th>
+					<th class="text-right">Goal</th>
+					<th class="text-right">Revenue</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><%= link_to Date.today.year, year_path(Year.where(year: Date.today.year).first.year) %></td>
+					<td class="text-right"><span class="currency"><%= number_to_currency(Year.where(year: today.year).first.goal_year.to_i) %></span></td>
+					<td class="text-right"><span class="currency green"><%= number_to_currency(Invoice.paidByYear(today.year).sum('cost'), { :negative_format => '(%n)' }) %></span></td>
+				</tr>
+				<tr>
+					<td><%= today.strftime('%B') %></td>
+					<td class="text-right"><span class="currency"><%= number_to_currency(Year.where(year: today.year).first.goals_months[today.month - 1].to_i) %></span></td>
+					<td class="text-right"><span class="currency green"><%= number_to_currency(Invoice.paidByMonth(today.year, today.month).sum('cost'), { :negative_format => '(%n)' }) %></span></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 	<div class="chart-wrap"><%= column_chart chart_trailing_x_months_path(5) %>
 </div>
