--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -60,63 +60,67 @@
 	<p>No invoices.</p>
 	<% else %>
 	<h4>Paid By Year</h4>
-	<table>
-		<thead>
-			<tr>
-				<th>Year</th>
-				<th>&nbsp;</th>
-				<th class="text-right">Total Paid</th>
-			</tr>
-		</thead>
-		<tbody>
-			<% Year.order('year DESC').each do |year|
-				if Invoice.paidByYear(year.year).where(:client_id => @client.id).length > 0
-			%>
-			<tr>
-				<td><%= link_to year do %><%= year.year %><% end %></td>
-				<td>&nbsp;</td>
-				<td class="currency text-right"><%= number_to_currency(Invoice.paidByYear(year.year).where(:client_id => @client.id).sum(:cost), { :negative_format => '(%n)' }) %></td>
-			</tr>
-			<% end end %>
-		</tbody>
-		<tfoot>
-			<tr>
-				<td>&nbsp;</td>
-				<td class="text-right"><strong>Total</strong></td>
-				<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
-			</tr>
-		</tfoot>
-	</table>
+	<div class="table-wrap">
+		<table>
+			<thead>
+				<tr>
+					<th>Year</th>
+					<th>&nbsp;</th>
+					<th class="text-right">Total Paid</th>
+				</tr>
+			</thead>
+			<tbody>
+				<% Year.order('year DESC').each do |year|
+					if Invoice.paidByYear(year.year).where(:client_id => @client.id).length > 0
+				%>
+				<tr>
+					<td><%= link_to year do %><%= year.year %><% end %></td>
+					<td>&nbsp;</td>
+					<td class="currency text-right"><%= number_to_currency(Invoice.paidByYear(year.year).where(:client_id => @client.id).sum(:cost), { :negative_format => '(%n)' }) %></td>
+				</tr>
+				<% end end %>
+			</tbody>
+			<tfoot>
+				<tr>
+					<td>&nbsp;</td>
+					<td class="text-right"><strong>Total</strong></td>
+					<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
+				</tr>
+			</tfoot>
+		</table>
+	</div>
 	<h4>All</h4>
-	<table>
-		<thead>
-			<tr>
-				<th>Date Sent</th>
-				<th>&nbsp;</th>
-				<th>ID</th>
-				<th class="text-right">Cost</th>
-				<th class="text-center">Date Paid</th>
-			</tr>
-		</thead>
-		<tbody>
-			<% @client.invoices.each do |invoice| %>
-			<tr id="invoicerow<%= invoice.id %>">
-				<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
-				<td><%= link_to new_invoice_path(:copied_id => invoice.id), :class => 'copy-invoice-link' do %><%= icon('far', 'copy') %><% end %><% if !invoice.paid? %><%= link_to mark_paid_invoice_path(invoice), title: 'Paid Today?', class: 'paid-today-btn paid-today-link', remote: true do %><%= icon('fas', 'check-square', class: 'right') %><% end %><% end %></td>
-				<td><%= invoice.display_id %></td>
-				<td class="currency text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
-				<td class="text-center"><% if invoice.paid == true %><span class="green"><%= invoice.paiddate %></span><% else %><span class="spread red">Not Paid</span><% end %></td>
-			</tr>
-			<% end %>
-		</tbody>
-		<tfoot>
-			<tr>
-				<td colspan="2">&nbsp;</td>
-				<td class="text-right"><strong>Total</strong></td>
-				<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
-				<td>&nbsp;</td>
-			</tr>
-		</tfoot>
-	</table>
+	<div class="table-wrap">
+		<table>
+			<thead>
+				<tr>
+					<th>Date Sent</th>
+					<th>&nbsp;</th>
+					<th>ID</th>
+					<th class="text-right">Cost</th>
+					<th class="text-center">Date Paid</th>
+				</tr>
+			</thead>
+			<tbody>
+				<% @client.invoices.each do |invoice| %>
+				<tr id="invoicerow<%= invoice.id %>">
+					<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
+					<td><%= link_to new_invoice_path(:copied_id => invoice.id), :class => 'copy-invoice-link' do %><%= icon('far', 'copy') %><% end %><% if !invoice.paid? %><%= link_to mark_paid_invoice_path(invoice), title: 'Paid Today?', class: 'paid-today-btn paid-today-link', remote: true do %><%= icon('fas', 'check-square', class: 'right') %><% end %><% end %></td>
+					<td><%= invoice.display_id %></td>
+					<td class="currency text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
+					<td class="text-center"><% if invoice.paid == true %><span class="green"><%= invoice.paiddate %></span><% else %><span class="spread red">Not Paid</span><% end %></td>
+				</tr>
+				<% end %>
+			</tbody>
+			<tfoot>
+				<tr>
+					<td colspan="2">&nbsp;</td>
+					<td class="text-right"><strong>Total</strong></td>
+					<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
+					<td>&nbsp;</td>
+				</tr>
+			</tfoot>
+		</table>
+	</div>
 	<% end %>
 </div>
