--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -17,25 +17,27 @@
 	<% if @expenses.blank? %>
 	<p>No expenses.</p>
 	<% else %>
-	<table>
-		<thead>
-			<tr>
-				<th>Date</th>
-				<th>Vendor</th>
-				<th>Name</th>
-				<th class="text-right">Cost</th>
-			</tr>
-		</thead>
-		<tbody>
-			<% @expenses.sort { |a,b| b.date <=> a.date }.each do |expense| %>
-			<tr>
-				<td><%= link_to expense do %><%= expense.date %><% end %></td>
-				<td><%= link_to expense.vendor do %><%= expense.vendor.name %><% end %></td>
-				<td><%= expense.name %></td>
-				<td class="currency text-right"><%= number_to_currency(expense.cost, { :negative_format => '(%n)' }) %></td>
-			</tr>
-			<% end %>
-		</tbody>
-	</table>
+	<div class="table-wrap">
+		<table>
+			<thead>
+				<tr>
+					<th>Date</th>
+					<th>Vendor</th>
+					<th>Name</th>
+					<th class="text-right">Cost</th>
+				</tr>
+			</thead>
+			<tbody>
+				<% @expenses.sort { |a,b| b.date <=> a.date }.each do |expense| %>
+				<tr>
+					<td><%= link_to expense do %><%= expense.date %><% end %></td>
+					<td><%= link_to expense.vendor do %><%= expense.vendor.name %><% end %></td>
+					<td><%= expense.name %></td>
+					<td class="currency text-right"><%= number_to_currency(expense.cost, { :negative_format => '(%n)' }) %></td>
+				</tr>
+				<% end %>
+			</tbody>
+		</table>
+	</div>
 	<% end %>
 </div>
