--- a/app/views/years/_tab-expenses.html.erb
+++ b/app/views/years/_tab-expenses.html.erb
@@ -13,72 +13,78 @@
 	</div>
 </div>
 <h3>By Vendor (to-date)</h3>
-<table>
-	<thead>
-		<tr>
-			<th>Vendor</th>
-			<th>Count</th>
-			<th class="text-right">Cost</th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @year.expensesVendors.each do |vendor| %>
-		<tr id="vendorrow<%= vendor.id %>">
-			<td><%= link_to vendor do %><%= vendor.name %><% end %></td>
-			<td><%= vendor.yearExpenses(@year.year).length %></td>
-			<td class="currency text-right"><%= number_to_currency(vendor.yearExpenses(@year.year).sum(:cost), { :negative_format => '(%n)' }) %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
+<div class="table-wrap">
+	<table>
+		<thead>
+			<tr>
+				<th>Vendor</th>
+				<th>Count</th>
+				<th class="text-right">Cost</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @year.expensesVendors.each do |vendor| %>
+			<tr id="vendorrow<%= vendor.id %>">
+				<td><%= link_to vendor do %><%= vendor.name %><% end %></td>
+				<td><%= vendor.yearExpenses(@year.year).length %></td>
+				<td class="currency text-right"><%= number_to_currency(vendor.yearExpenses(@year.year).sum(:cost), { :negative_format => '(%n)' }) %></td>
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
+</div>
 <% end %>
 <h3>Expenses (to-date)</h3>
 <% if @year.expenses.blank? %>
 <p>No to-date expenses in <%= @year.year %>.</p>
 <% else %>
-<table>
-	<thead>
-		<tr>
-			<th>Date</th>
-			<th>Vendor</th>
-			<th>Name</th>
-			<th class="text-right">Cost</th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @year.expenses.each do |expense| %>
-		<tr id="expenserow<%= expense.id %>">
-			<td><%= link_to expense do %><%= expense.date %><% end %></td>
-			<td><%= link_to expense.vendor do %><%= expense.vendor.name %><% end %></td>
-			<td><%= expense.name %></td>
-			<td class="currency text-right"><%= number_to_currency(expense.cost, { :negative_format => '(%n)' }) %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
+<div class="table-wrap">
+	<table>
+		<thead>
+			<tr>
+				<th>Date</th>
+				<th>Vendor</th>
+				<th>Name</th>
+				<th class="text-right">Cost</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @year.expenses.each do |expense| %>
+			<tr id="expenserow<%= expense.id %>">
+				<td><%= link_to expense do %><%= expense.date %><% end %></td>
+				<td><%= link_to expense.vendor do %><%= expense.vendor.name %><% end %></td>
+				<td><%= expense.name %></td>
+				<td class="currency text-right"><%= number_to_currency(expense.cost, { :negative_format => '(%n)' }) %></td>
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
+</div>
 <% end %>
 <h3>Expenses (future)</h3>
 <% if @year.expensesFuture.blank? %>
 <p>No future expenses in <%= @year.year %>.</p>
 <% else %>
-<table>
-	<thead>
-		<tr>
-			<th>Date</th>
-			<th>Vendor</th>
-			<th>Name</th>
-			<th class="text-right">Cost</th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @year.expensesFuture.each do |expense| %>
-		<tr id="expenserow<%= expense.id %>">
-			<td><%= link_to expense do %><%= expense.date %><% end %></td>
-			<td><%= link_to expense.vendor do %><%= expense.vendor.name %><% end %></td>
-			<td><%= expense.name %></td>
-			<td class="currency text-right"><%= number_to_currency(expense.cost, { :negative_format => '(%n)' }) %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
+<div class="table-wrap">
+	<table>
+		<thead>
+			<tr>
+				<th>Date</th>
+				<th>Vendor</th>
+				<th>Name</th>
+				<th class="text-right">Cost</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @year.expensesFuture.each do |expense| %>
+			<tr id="expenserow<%= expense.id %>">
+				<td><%= link_to expense do %><%= expense.date %><% end %></td>
+				<td><%= link_to expense.vendor do %><%= expense.vendor.name %><% end %></td>
+				<td><%= expense.name %></td>
+				<td class="currency text-right"><%= number_to_currency(expense.cost, { :negative_format => '(%n)' }) %></td>
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
+</div>
 <% end %>
