--- a/app/views/years/_tab-income.html.erb
+++ b/app/views/years/_tab-income.html.erb
@@ -15,74 +15,80 @@
 		<% if @year.invoices.unpaid.blank? %>
 		<p>No unpaid invoices issued in <%= @year.year %>.</p>
 		<% else %>
-		<table>
-			<thead>
-				<tr>
-					<th>Client</th>
-					<th>Issue Date</th>
-					<th class="text-center">Days Since Issued</th>
-					<th class="text-right">Cost</th>
-				</tr>
-			</thead>
-			<tbody>
-				<% @year.invoices.unpaid.each do |invoice| %>
-				<tr id="invoicerow<%= invoice.id %>">
-					<td><%= link_to Client.find(invoice.client_id) do %><%= Client.find(invoice.client_id).name %><% end %></td>
-					<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
-					<td class="text-center"><%= (Date.today - invoice.date).to_i %></td>
-					<td class="currency text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
-				</tr>
-				<% end %>
-			</tbody>
-		</table>
+		<div class="table-wrap">
+			<table>
+				<thead>
+					<tr>
+						<th>Client</th>
+						<th>Issue Date</th>
+						<th class="text-center">Days Since Issued</th>
+						<th class="text-right">Cost</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @year.invoices.unpaid.each do |invoice| %>
+					<tr id="invoicerow<%= invoice.id %>">
+						<td><%= link_to Client.find(invoice.client_id) do %><%= Client.find(invoice.client_id).name %><% end %></td>
+						<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
+						<td class="text-center"><%= (Date.today - invoice.date).to_i %></td>
+						<td class="currency text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
+		</div>
 		<% end %>
 		<% if Invoice.paidByYear(@year.year).blank? %>
 		<p>No invoices were paid in <%= @year.year %>.</p>
 		<% else %>
 		<h3>Paid Invoices By Client</h3>
-		<table>
-			<thead>
-				<tr>
-					<th>Client</th>
-					<th class="text-center">Federal EIN</th>
-					<th class="text-center"># of Invoices</th>
-					<th class="text-right">Cost</th>
-				</tr>
-			</thead>
-			<tbody>
-				<% @year.paidClients.each do |client| %>
-				<tr>
-					<td><%= link_to client.name, client %></td>
-					<td class="text-center"><% if client.federalein %><%= client.federalein %><% else %>&mdash;<% end %></td>
-					<td class="text-center"><%= client.yearPaidInvoices(@year.year).count %></td>
-					<td class="currency text-right"><%= number_to_currency(client.yearPaidInvoices(@year.year).sum(:cost)) %></td>
-				</tr>
-				<% end %>
-			</tbody>
-		</table>
+		<div class="table-wrap">
+			<table>
+				<thead>
+					<tr>
+						<th>Client</th>
+						<th class="text-center">Federal EIN</th>
+						<th class="text-center"># of Invoices</th>
+						<th class="text-right">Cost</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @year.paidClients.each do |client| %>
+					<tr>
+						<td><%= link_to client.name, client %></td>
+						<td class="text-center"><% if client.federalein %><%= client.federalein %><% else %>&mdash;<% end %></td>
+						<td class="text-center"><%= client.yearPaidInvoices(@year.year).count %></td>
+						<td class="currency text-right"><%= number_to_currency(client.yearPaidInvoices(@year.year).sum(:cost)) %></td>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
+		</div>
 		<h3>All Paid Invoices</h3>
-		<table>
-			<thead>
-				<tr>
-					<th>Client</th>
-					<th>Issue Date</th>
-					<th>Paid Date</th>
-					<th class="text-right">Cost</th>
-					<th class="text-center">Paid?</th>
-				</tr>
-			</thead>
-			<tbody>
-				<% Invoice.paidByYear(@year.year).each do |invoice| %>
-				<tr id="invoicerow<%= invoice.id %>">
-					<td><%= link_to Client.find(invoice.client_id) do %><%= Client.find(invoice.client_id).name %><% end %></td>
-					<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
-					<td><%= invoice.paiddate %></td>
-					<td class="currency text-right"><% if invoice.hasDiscount %>^<% end %><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
-					<td class="text-center"><% if invoice.paid == true %><%= icon('fas', 'check', class: 'green') %><% else %><span class="spread red">Not Paid</span><% end %></td>
-				</tr>
-				<% end %>
-			</tbody>
-		</table>
+		<div class="table-wrap">
+			<table>
+				<thead>
+					<tr>
+						<th>Client</th>
+						<th>Issue Date</th>
+						<th>Paid Date</th>
+						<th class="text-right">Cost</th>
+						<th class="text-center">Paid?</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% Invoice.paidByYear(@year.year).each do |invoice| %>
+					<tr id="invoicerow<%= invoice.id %>">
+						<td><%= link_to Client.find(invoice.client_id) do %><%= Client.find(invoice.client_id).name %><% end %></td>
+						<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
+						<td><%= invoice.paiddate %></td>
+						<td class="currency text-right"><% if invoice.hasDiscount %>^<% end %><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
+						<td class="text-center"><% if invoice.paid == true %><%= icon('fas', 'check', class: 'green') %><% else %><span class="spread red">Not Paid</span><% end %></td>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
+		</div>
 		<% end %>
 	</div>
 </div>
