--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,5 +6,5 @@
 		<label for="search"><i class="fas fa-search"></i></label>
 		<input id="search" type="search" placeholder="Search for clients, vendors, goals, etc.">
 	</div>
-	<div class="user-meta-wrap"><%= link_to destroy_user_session_path, :method => :delete do %>Sign Out<%= icon('fas', 'sign-out-alt', class: 'right') %><% end %></div>
+	<div class="nav-toggle"><%= icon('fas', 'grip-lines', class: 'fa-fw') %></div>
 </header>
