--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -11,5 +11,6 @@
 @import 'partials/buttons';
 @import 'partials/forms';
 @import 'partials/charts';
+@import 'partials/years';
 @import 'partials/login';
 @import 'partials/alerts';
