--- a/app/views/lines/_line.html.erb
+++ b/app/views/lines/_line.html.erb
@@ -8,5 +8,5 @@
   <td class="text-center">&mdash;</td>
   <td class="text-center">&mdash;</td>
   <% end %>
-  <td class="currency text-right"><%= number_to_currency(line.total, { :negative_format => '(%n)' }) %></td>
+  <td class="currency text-right"><% if line.discount? %>^<% end %><%= number_to_currency(line.total, { :negative_format => '(%n)' }) %></td>
 </tr>
