--- a/app/assets/stylesheets/partials/_header.scss
+++ b/app/assets/stylesheets/partials/_header.scss
@@ -15,6 +15,22 @@ header {
 		padding-right: 1.5rem;
 	}
 
+	@include mq($screen-xl) {
+
+		&:before {
+			content: ' ';
+			z-index: -1;
+			position: absolute;
+			top: 0px;
+			left: 50%;
+			transform: translate(-50%, 0px);
+			width: 100vw;
+			height: 100%;
+			background: inherit;
+		}
+
+	}
+
 	.logo-wrap {
 
 		padding: 0px 1.5rem;
