--- a/app/assets/stylesheets/partials/_login.scss
+++ b/app/assets/stylesheets/partials/_login.scss
@@ -1,7 +1,12 @@
+.controller-sessions.action-new {
+	background: $white;
+}
+
 .form-login {
 
 	&-wrap {
 
+		padding: 3rem 0px;
 		margin: 3rem 1.5rem;
 		text-align: center;
 
