Exclude outstanding from client total

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -66,7 +66,7 @@
 				<tr>
 					<td>&nbsp;</td>
 					<td class="text-right"><strong>Total</strong></td>
-					<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
+					<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal - @client.unpaidTotal, { :negative_format => '(%n)' }) %></strong></td>
 				</tr>
 			</tfoot>
 		</table>
