--- a/app/views/years/expenses.csv.erb
+++ b/app/views/years/expenses.csv.erb
@@ -9,11 +9,11 @@
 ] %>
 <%= CSV.generate_line headers %>
 <% @year.expenses.sort { |a,b| a.date <=> b.date }.each do |expense| %><%= CSV.generate_line([
-    expense.date,
-    expense.name,
-    expense.vendor.name.gsub(',', ''),
-    expense.vendor.category.gsub(',', ''),
-    expense.account,
-    expense.cost,
-    expense.notes.length > 0 ? expense.notes.gsub(',', '') : nil,
-  ]).html_safe %><% end %>
+	expense.date,
+	expense.name,
+	expense.vendor.name.gsub(',', ''),
+	expense.vendor.category.gsub(',', ''),
+	expense.account,
+	expense.cost,
+	expense.notes.length > 0 ? expense.notes.gsub(',', '') : nil
+]).html_safe %><% end %>
