Changed Chase Quick Pay to Zelle

--- a/app/views/invoices/_payment-options.html.erb
+++ b/app/views/invoices/_payment-options.html.erb
@@ -30,8 +30,8 @@
 	</div>
 	<hr>
 	<div class="payment-option payment-option-electronic">
-		<h3>Pay electronically via Zelle or Chase QuickPay:</h3>
-		<p>Make a <a href="https://www.zellepay.com/" target="_blank">Zelle</a> or Chase QuickPay payment to 'info@seferdesign.com'.<br>For a complete list of supported banks, see <a href="https://www.zellepay.com/get-started" target="_blank">here</a>.</p>
+		<h3>Pay electronically via Zelle:</h3>
+		<p>Make a <a href="https://www.zellepay.com/" target="_blank">Zelle</a> payment to 'info@seferdesign.com'.<br>For a complete list of supported banks, see <a href="https://www.zellepay.com/get-started" target="_blank">here</a>.</p>
 		<div class="payment-images">
 			<%= image_tag('payment/chase.svg') %><%= image_tag('payment/bankofamerica.svg') %><%= image_tag('payment/wellsfargo.svg') %><%= image_tag('payment/capitalone.svg') %><%= image_tag('payment/citi.svg') %><%= image_tag('payment/pnc.svg') %><%= image_tag('payment/tdbank.svg') %><%= image_tag('payment/usbank.svg') %>
 		</div>
