Revert "Hid address change for now"
This reverts commit 5d6ff2de30319d772686c9a97f7d43fe4029eb69.

--- a/app/views/invoices/_payment-options.html.erb
+++ b/app/views/invoices/_payment-options.html.erb
@@ -26,7 +26,7 @@
 		<h3>Pay via paper check:</h3>
 		<p>Please make the check out to '<strong><%= company[:pay_to] %></strong>' and mail to:</p>
 		<p><%= company[:pay_to] %><br><%= company[:address][:street] %><br><%= company[:address][:city] %>, <%= company[:address][:state_abbrv] %> <%= company[:address][:zipcode] %></p>
-		<!--<p><strong>PLEASE NOTE: Our mailing address has recently changed.</strong></p>-->
+		<p><strong>PLEASE NOTE: Our mailing address has recently changed.</strong></p>
 	</div>
 	<hr>
 	<div class="payment-option payment-option-electronic">
